Bug 520891 - nsHashtable::Put returns null on both failure and when we're adding a new entry. Assume the latter since it's correct more of the time. r=bsmedberg